# bvmodelgen3

./: .gitignore  README.md  main.py  pyproject.toml  test_fourier.py  test_valves.py  test_valves_smoothing.py  util_calculate_stl_volume.py
src/: CMRnn.py  PatientData.py  imgutils.py  modelutils.py  multiproccesingutils.py  niftiutils.py  plotutils.py  seg2contours.py  segutils.py  slicealign.py  valveutils.py
src/bvfitting/: BiventricularModel.py  Frame.py  GPDataSet.py  __init__.py  build_model_tools.py  fitting_tools.py  surface_enum.py
src/bvfitting/template/: ETIndicesEpiRVLV.txt  ETIndicesMaterials.txt  ETIndicesSorted.txt  ETIndicesSorted_mod.txt  ETIndicesSorted_mod2.txt  ETIndicesThruWall.txt  GTSTG_x.txt  GTSTG_x_stiff_valve.txt  GTSTG_y.txt  GTSTG_y_stiff_valve.txt  GTSTG_z.txt  GTSTG_z_stiff_valve.txt  add_epi.csv  av_elems.txt  boundary.txt  bv_to_template_map.npy  control_mesh_connectivity.txt  control_points_patches.txt  epi_to_septum_ETindices.txt  etVertexElementNum.txt  etVertexXi.txt  fraction.txt  model.txt  model_mod.txt  model_mod2.txt  modify_rvlv_junction.py  modify_template.py  mv_elems.txt  new_rvlv_nodes.csv  patch_coordinates.txt  phantom_points.txt  pv_elems.txt  (+17 more)
src/bvmodelgen.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
test_scripts/: parallelize_fitting.py  test_imregistration.py  test_move_walls.py  test_valves.py  test_valves_smoothing.py  test_visualize_segmentations.py
utils/: util_calculate_stl_volume.py  util_imgs2vtu.py  util_plot_time_segmentation.py  util_subdivide_surface.py  util_visualize_imgs.py
(+13 files in other folders)
